src/salesforce/objects/Duplicate_Audit__c/Duplicate_Audit__c.object-meta.xml
<CustomObject>
     <nameField>
         <label>Name</label>
         <type>Text</type>
     </nameField>

     <fields>
         <fullName>Name</fullName>
         <label>Name</label>
         <length>80</length>
         <required>true</required>
         <type>Text</type>
         <unique>true</unique>
     </fields>

     <label>Duplicate Audit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>

    <pluralLabel>Duplicate Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>