src/salesforce/objects/Duplicate_Audit__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>